tests/NormalTests/paczka1/small_fuzzy/34797861.err
Error in line 1: OdS0UNY7yd S593 38,9
Error in line 6: srI3qrVl4vc S947 79,4
Error in line 14: OdS0UNY7yd S92 21,4
